# funkypipes

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  configure_coverage.sh  coverage_cmds.txt
.github/workflows/: ci.yml
docs/: roadmap.md
examples/: readme_examples.cpp
include/funkypipes/: at.hpp  bind_front.hpp  compose.hpp  consume_at.hpp  disable_optional_argument_fn.hpp  fork.hpp  fork_and_bypass.hpp  funky_void.hpp  index_sequence_complement.hpp  make_auto_pipe.hpp  make_callable.hpp  make_failable_pipe.hpp  make_pipe.hpp  pass_along.hpp  state_store.hpp  when_type.hpp  zip.hpp
include/funkypipes/details/: compose_raw.hpp  index_sequence.hpp  make_arg_optional.hpp  make_fallback.hpp  make_funky_void_removing.hpp  make_funky_void_returning.hpp  make_possibly_skippable.hpp  make_raw_pipe.hpp  make_signature_checking.hpp  make_skippable.hpp  make_tuple_packing.hpp  make_tuple_returning.hpp  make_tuple_unpacking.hpp  remove_tuple_element.hpp  traits.hpp  with_args_tupled.hpp  with_empty_tuple_result_as_void.hpp  with_non_single_args_tupled.hpp  with_result_tupled.hpp  with_signature_check.hpp  with_tuple_arg_unpacked.hpp  with_tuple_result_collapsed.hpp  with_void_result_as_empty_tuple.hpp
include/funkypipes/details/tuple/: collapse_or_forward_tuple.hpp  drop_tuple_element.hpp  index_sequence.hpp  recreate_tuple_from_indices.hpp  resolve_rvalue_references.hpp  separate_element_from_tuple.hpp  separate_tuple_elements.hpp  try_flatten_tuple.hpp  tuple_indices_of.hpp  tuple_traits.hpp
tests/: test_and_then.cpp  test_at.cpp  test_bind_front.cpp  test_compose.cpp  test_compose_raw.cpp  test_consume_at.cpp  test_fork.cpp  test_fork_and_bypass.cpp  test_index_sequence.cpp  test_make_arg_optional.cpp  test_make_auto_pipe.cpp  test_make_callable.cpp  test_make_failable_pipe.cpp  test_make_funky_void_removing.cpp  test_make_funky_void_returning.cpp  test_make_pipe.cpp  test_make_possibly_skippable.cpp  test_make_raw_pipe.cpp  test_make_signature_checking.cpp  test_make_skippable.cpp  test_make_tuple_packing.cpp  test_make_tuple_returning.cpp  test_make_tuple_unpacking.cpp  test_non_single_args_tupled.cpp  test_pass_along.cpp  test_remove_tuple_element.cpp  test_state_store.cpp  test_traits.cpp  test_when_type.cpp  test_with_args_tupled.cpp  test_with_empty_tuple_result_as_void.cpp  test_with_signature_check.cpp  test_with_tuple_arg_unpacked.cpp  test_with_tupled_result.cpp  test_with_void_result_as_empty_tuple.cpp
tests/details/tuple/: test_collapse_or_forward_tuple.cpp  test_drop_tuple_element.cpp  test_index_sequence.cpp  test_recreate_tuple_from_indices.cpp  test_resolve_rvalue_references.cpp  test_separate_element_from_tuple.cpp  test_separate_tuple_elements.cpp  test_try_flatten_tuple.cpp  test_tuple_indices_of.cpp  test_tuple_traits.cpp
tests/pipes/: generic_make_pipe_tests.hpp
tests/predefined/execution_semantics/: make_pipe_tests.hpp  make_skippable_tests.hpp
tests/predefined/signature_propagation/: standard_tests.hpp
tests/utils/: move_only_forwarding_fn.hpp  move_only_struct.hpp
